zamana bağlı haritayı basma serveri yazıldı. Yapılacaklar: exploration scan reset kısmında servere bağlanacak harita bilgisini ve robot pozisyon bilgisini ve bitmap bilgisini alacak. rosbag record ile server record edecek. Sonra simülasyon fazı biter.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,27 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "csignal": "cpp",
+        "cstdarg": "cpp",
+        "any": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp",
+        "cinttypes": "cpp",
+        "codecvt": "cpp",
+        "condition_variable": "cpp",
+        "forward_list": "cpp",
+        "unordered_set": "cpp",
+        "algorithm": "cpp",
+        "iterator": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "regex": "cpp",
+        "future": "cpp",
+        "mutex": "cpp",
+        "shared_mutex": "cpp",
+        "cfenv": "cpp",
+        "valarray": "cpp"
     }
 }
