--- a/husky_sim/src/gazebo_robot_plugin/package.xml
+++ b/husky_sim/src/gazebo_robot_plugin/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>gazebo_robot_plugin</name>
   <version>0.6.2</version>
   <description>Clearpath Husky plugin definition</description>
@@ -13,8 +13,15 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <run_depend>gazebo</run_depend>
-  
+  <exec_depend>gazebo</exec_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
   <export>
   </export>
 </package>
