--- a/husky_sim/src/gazebo_map_plugin/CMakeLists.txt
+++ b/husky_sim/src/gazebo_map_plugin/CMakeLists.txt
@@ -21,6 +21,8 @@ find_package(catkin REQUIRED COMPONENTS
 find_package(catkin REQUIRED COMPONENTS
 )
 
+find_package(Boost REQUIRED COMPONENTS system)
+
 add_service_files( 
    FILES 
    demo_srv.srv 
