record bag örneği eklendi bir reset için elde edilen bag dosyası aynı adlı building editor içindeki walla atılacak.rviz ile diğer haritalara geçişlerdeki laser taramalrına bakılacak.

--- a/husky_sim/src/mastering_ros_demo_pkg/CMakeLists.txt
+++ b/husky_sim/src/mastering_ros_demo_pkg/CMakeLists.txt
@@ -13,13 +13,17 @@ set(CATKIN_TOPLEVEL TRUE)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  actionlib
-  actionlib_msgs
+#   actionlib
+#   actionlib_msgs
   roscpp
   std_msgs
+  nav_msgs
+  sensor_msgs
   message_generation
   message_runtime
+  rosbag
 )
+
 
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system)
