--- a/husky_sim/src/mastering_ros_demo_pkg/CMakeLists.txt
+++ b/husky_sim/src/mastering_ros_demo_pkg/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   nav_msgs
   sensor_msgs
+  message_filters
   message_generation
   message_runtime
   rosbag
