--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,10 @@
    "request": "launch",
    "program": "${file}",
    "console": "integratedTerminal",
-   "args": ["single_room","10", "-5", "5", "--mesh"],
-   // "args": ["multi_room","16"],
+   "args": ["single_room","6", "-10", "10", "--mesh", "--debug"],
+   // "args": ["multi_room","1"],
+   //# [kaç tane multi harita oluşacağı] [hangi id den itibaren] [kaç tane single room olacağı] [single max room uzunluğu sayısı] [max nokta sayısı] [%meshli mi meshsiz mi olacağı] [multi_map scale facror] [...]
+   "args" : ["all_room", "20", "1", "8", "5", "35", "30" , "30", "--debug"]
 
   }
  ]
