--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,8 @@
         "mutex": "cpp",
         "shared_mutex": "cpp",
         "cfenv": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "*.ipp": "cpp"
     },
     "cmake.sourceDirectory": "${workspaceFolder}/husky_sim/build/catkin_generated/metapackages/husky_desktop"
 }
