--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,10 @@
    "request": "launch",
    "program": "${file}",
    "console": "integratedTerminal",
-   // "args": ["single_room","6", "-10", "10"],
-   "args": ["multi_room","10", "--debug"],
+   // "args": ["single_room","6", "-10", "10", "--mesh"],
+   // "args": ["multi_room","99", "--mesh", "--debug"],
    //# [kaç tane multi harita oluşacağı] [hangi id den itibaren] [kaç tane single room olacağı] [single max room uzunluğu sayısı] [max nokta sayısı] [%meshli mi meshsiz mi olacağı] [max multi_map scale facror] [...]
-   // "args" : ["all_room", "20", "1", "10", "20", "10", "75" , "30"]
+   "args" : ["all_room", "150", "200", "70", "20", "10", "75" , "30"]
 
   }
  ]
