--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-kitti_velodyne_bin_to_pcd/
-kitti_velodyne_bin_to_pcd/**
+
+kitti_velodyne_bin_to_pcd/CMakeFiles/
+kitti_velodyne_bin_to_pcd/CMakeFiles/**
+kitti_velodyne_bin_to_pcd/binpcd
+kitti_velodyne_bin_to_pcd/CMakeCache.txt
+kitti_velodyne_bin_to_pcd/Makefile
+kitti_velodyne_bin_to_pcd/cmake_install.cmake
+numpy_dataset_sequences_gazebo/
+numpy_dataset_sequences_gazebo/**
+numpy_dataset_sequences/
+numpy_dataset_sequences/**
+neural_net/
+neural_net/**
+poses/
+poses/**
+ring_5_pcd_sequences/
+ring_5_pcd_sequences/**
+*.h5
 *.zip
 *.ply
 *.deb
+*.json
